--- a/src/sass/page/_garage.scss
+++ b/src/sass/page/_garage.scss
@@ -14,6 +14,10 @@
   margin-top: 10px;
 }
 
-.car-sprite {
-  background-image: '../../assets/car.svg';
+.create-car, .update-car {
+  display: flex;
+  align-items: center;
+  input {
+    margin-right: 10px;
+  }
 }
