--- a/src/style.scss
+++ b/src/style.scss
@@ -7,6 +7,7 @@
 //Components
 @import 'sass/components/buttons';
 @import 'sass/components/car';
+@import 'sass/components/inputs';
 
 //Pages
 @import 'sass/page/garage';
